syntax = "proto3";
package jinxprotocol.vest;

import "gogoproto/gogo.proto";
import "jinxprotocol/vest/vest_entry.proto";

option go_package = "github.com/jinxprotocol/v4-chain/protocol/x/vest/types";

// GenesisState defines the vest module's genesis state.
message GenesisState {
  // The vest entries at genesis.
  repeated VestEntry vest_entries = 1 [ (gogoproto.nullable) = false ];
}
